--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -23,7 +23,14 @@
         <Menu Height="39" VerticalAlignment="Top" Background ="#2C2C2C" Margin="39,0,-0.4,0">
 
             <MenuItem Header="Файл" Foreground="#FCAEF6" Height="39" Width="39" >
-                <MenuItem Header="Новый Ctrl+N" Background ="#2C2C2C" ></MenuItem>
+                <MenuItem Background ="#2C2C2C" >
+                    <MenuItem.Header>
+                        <StackPanel Orientation="Horizontal" Width="100">
+                            <TextBlock Width="60" Text="Новый" TextAlignment="Left"/>
+                            <TextBlock Width="40" Text="Ctrl+N" TextAlignment="Right"/>
+                        </StackPanel>
+                    </MenuItem.Header>
+                </MenuItem>
                 <MenuItem Header="Открыть Ctrl+O" Background ="#2C2C2C" ></MenuItem>
                 <MenuItem Header="Сохранить Ctrl+S" Background ="#2C2C2C" ></MenuItem>
                 <MenuItem Header="Сохранить как... Shift+Ctr+S" Background ="#2C2C2C" ></MenuItem>
