--- a/GUI/RenderControl.xaml
+++ b/GUI/RenderControl.xaml
@@ -6,6 +6,6 @@
              xmlns:opentk="clr-namespace:OpenTK.Wpf;assembly=GLWpfControl"
              xmlns:local="clr-namespace:GUI"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" MouseDown="UserControl_MouseDown">
+             d:DesignHeight="450" d:DesignWidth="800" MouseDown="UserControl_MouseDown" MouseWheel="UserControl_MouseWheel">
     <opentk:GLWpfControl x:Name="OpenTKControl" Render="OpenTKControl_Update" Loaded="OpenTKControl_Loaded"/>
 </UserControl>
