--- a/GUI/RenderControl.xaml
+++ b/GUI/RenderControl.xaml
@@ -7,5 +7,5 @@
              xmlns:local="clr-namespace:GUI"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" MouseDown="UserControl_MouseDown" MouseWheel="UserControl_MouseWheel">
-    <opentk:GLWpfControl x:Name="OpenTKControl" Render="OpenTKControl_Update" Loaded="OpenTKControl_Loaded"/>
+    <opentk:GLWpfControl x:Name="OpenTKControl" Render="OpenTKControl_Update" Loaded="OpenTKControl_Loaded" SizeChanged="OpenTKControl_SizeChanged"/>
 </UserControl>
