--- a/GUI/RenderControl.xaml
+++ b/GUI/RenderControl.xaml
@@ -6,6 +6,10 @@
              xmlns:opentk="clr-namespace:OpenTK.Wpf;assembly=GLWpfControl"
              xmlns:local="clr-namespace:GUI"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" MouseDown="UserControl_MouseDown" MouseWheel="UserControl_MouseWheel">
+             d:DesignHeight="450" d:DesignWidth="800"
+             MouseDown="UserControl_MouseDown" MouseWheel="UserControl_MouseWheel"
+             MouseEnter="UserControl_MouseEnter" MouseLeave="UserControl_MouseLeave"
+             MouseUp="UserControl_MouseUp" MouseMove="UserControl_MouseMove"
+             KeyDown="OnKeyDown" KeyUp="OnKeyUp">
     <opentk:GLWpfControl x:Name="OpenTKControl" Render="OpenTKControl_Update" Loaded="OpenTKControl_Loaded" SizeChanged="OpenTKControl_SizeChanged"/>
 </UserControl>
