--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -5,117 +5,77 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1080" Width="1920">
-        <Grid>
+        Title="MainWindow" WindowState="Maximized">
+    <Grid Background="#202020">
         <Grid.RowDefinitions>
-            <RowDefinition Height="39"></RowDefinition>
-            <RowDefinition Height="993*"></RowDefinition>
-            <RowDefinition Height="35*"></RowDefinition>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="*" MinHeight="100"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="5*" MinWidth="40"></ColumnDefinition>
-            <ColumnDefinition Width="auto" ></ColumnDefinition>
-            <ColumnDefinition MinWidth="300"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <DockPanel LastChildFill="True" Grid.Row="0" Grid.ColumnSpan="3" >
-            <Menu Height="39" VerticalAlignment="Top" Background ="#2C2C2C" >
-                <MenuItem  Height="30" Width="30"  Margin="5">
-                    <MenuItem.Icon>
-                        <Image Source="Pictures\icon_pinc_2.png" Margin="-3,-7,-8,-6"/>
-                    </MenuItem.Icon>
-                </MenuItem>
-
-                <MenuItem Header="Файл" Foreground="#FCAEF6" Height="39" Width="39" Background ="#2C2C2C" >
-
-                    <MenuItem Header="Новый Ctrl+N" Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Открыть Ctrl+O" Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Сохранить Ctrl+S" Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Сохранить как... Shift+Ctr+S" Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Экспорт в... Ctrl+E" Background ="#2C2C2C">
-                        <MenuItem Header="SVG" Background ="#2C2C2C"></MenuItem>
-                        <MenuItem Header="HTML" Background ="#2C2C2C"></MenuItem>
-                        <MenuItem Header="PDF" Background ="#2C2C2C" ></MenuItem>
-                        <MenuItem Header="PNG" Background ="#2C2C2C" ></MenuItem>
-                        <MenuItem Header="JPG" Background ="#2C2C2C"></MenuItem>
-
+        <Grid Grid.Row="0" Style="{StaticResource ResourceKey=GrayStretch}">
+            <StackPanel Style="{StaticResource ResourceKey=GrayStretch}" Orientation="Horizontal">
+                <Image Style="{StaticResource ResourceKey=GrayStretch}" Source="Pictures\icon_pinc_2.png" Margin="2"/>
+                <Menu Style="{StaticResource ResourceKey=GrayStretch}" VerticalAlignment="Center">
+                    <MenuItem Header="Файл">
+                        <MenuItem Header="Новый Ctrl+N"/>
+                        <MenuItem Header="Открыть Ctrl+O"/>
+                        <MenuItem Header="Сохранить Ctrl+S"/>
+                        <MenuItem Header="Сохранить как... Shift+Ctr+S"/>
+                        <MenuItem Header="Экспорт в... Ctrl+E">
+                            <MenuItem Header="SVG"/>
+                            <MenuItem Header="HTML"/>
+                            <MenuItem Header="PDF"/>
+                            <MenuItem Header="PNG"/>
+                            <MenuItem Header="JPG"/>
+                        </MenuItem>
                     </MenuItem>
-
-                </MenuItem>
-
-                <MenuItem Header="Редактирование"  Width="101" Foreground="#FCAEF6" >
-                    <MenuItem Header="Отменить Ctrl+Z" Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Повторить Shift+Ctrl+Z" Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Вырезать Ctr+X" Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Копировать Ctr+C" Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Вставить Ctr+V" Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Настройки" Background ="#2C2C2C" ></MenuItem>
-                </MenuItem>
-                <MenuItem Header="Объект" Width="53" Foreground="#FCAEF6" >
-                    <MenuItem Header="Перемещение..." Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Поворот..." Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Зеркальное отражение..." Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Наклон..." Background ="#2C2C2C" ></MenuItem>
-                </MenuItem>
-                <MenuItem Header="Выделение" Width="75" Foreground="#FCAEF6" >
-                    <MenuItem Header="Все" Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Отменить выделение" Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Выделить снова" Background ="#2C2C2C" ></MenuItem>
-                    <MenuItem Header="Инверсия" Background ="#2C2C2C" ></MenuItem>
-                </MenuItem>
-                <MenuItem Header="Справка" Width="59" Foreground="#FCAEF6" >
-                    <MenuItem Header="Справка программы ItCanDraw F1" Background ="#2C2C2C" Click="MenuItem_Click_FAQ" ></MenuItem>
-                    <MenuItem Header="Руководство по ItCanDraw" Background ="#2C2C2C" Click="MenuItem_Click_FAQ2" ></MenuItem>
-                    <MenuItem Header="Информация о разработчиках" Background ="#2C2C2C" Click="MenuItem_Click_Autors" ></MenuItem>
-                    <MenuItem Header="Выйти..." Background ="#2C2C2C" ></MenuItem>
-                </MenuItem>
-
-            </Menu>
-        </DockPanel>
-        <DockPanel LastChildFill="True" Grid.ColumnSpan="2" Margin="0,36,5,0" Grid.RowSpan="2">
-            <Menu Height="1080" Width="39" HorizontalAlignment="Left" Background ="#2C2C2C">
-                <MenuItem  Height="24" Width="24" Margin="8" >
-                    <MenuItem.Icon>
-                        <Image Source="Pictures\i_выделения_НеАктивная.png" Margin="-4,-4,-4,-4" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem  Height="24" Width="24"  Margin="8" MaxWidth="24">
-                    <MenuItem.Icon>
-                        <Image Source="Pictures\ii_квадрат.png" Margin="-4,-4,-4,-5" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem  Height="24" Width="24"  Margin="8" MaxWidth="24">
-                    <MenuItem.Icon>
-                        <Image Source="Pictures\ii_треугольник.png" Margin="-4,-4,-4,-5" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem  Height="24" Width="24"  Margin="8" MaxWidth="24">
-                    <MenuItem.Icon>
-                        <Image Source="Pictures\ii_круг.png" Margin="-4,-4,-4,-5" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem  Height="24" Width="24"  Margin="8" MaxWidth="24">
-                    <MenuItem.Icon>
-                        <Image Source="Pictures\ii_линия.png" Margin="-4,-4,-4,-5" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem  Height="24" Width="24"  Margin="8" MaxWidth="24">
-                    <MenuItem.Icon>
-                        <Image Source="Pictures\i_удаление_НеАктивная.png" Margin="-4,-4,-4,-5" />
-                    </MenuItem.Icon>
-                </MenuItem>
-                <MenuItem  Height="24" Width="24"  Margin="8" MaxWidth="24">
-                    <MenuItem.Icon>
-                        <Image Source="Pictures\i_зум_НеАктивная.png" Margin="-4,-4,-4,-5" />
-                    </MenuItem.Icon>
-                </MenuItem>
-            </Menu>
-            <local:RenderControl x:Name="renderControl" Loaded="renderControl_Loaded"/>
-        </DockPanel>
-        <DockPanel LastChildFill="True" Grid.Row="2" Grid.ColumnSpan="3" >
-            <Menu Background ="#2C2C2C"/>
-        </DockPanel>
-        <DockPanel LastChildFill="True" Grid.Row="1" Grid.Column="3" >
-            <Menu HorizontalAlignment="Right" Background ="#2C2C2C" >
+                    <MenuItem Header="Редактирование">
+                        <MenuItem Header="Отменить Ctrl+Z"/>
+                        <MenuItem Header="Повторить Shift+Ctrl+Z"/>
+                        <MenuItem Header="Вырезать Ctr+X"/>
+                        <MenuItem Header="Копировать Ctr+C"/>
+                        <MenuItem Header="Вставить Ctr+V"/>
+                        <MenuItem Header="Настройки"/>
+                    </MenuItem>
+                    <MenuItem Header="Объект">
+                        <MenuItem Header="Перемещение..."/>
+                        <MenuItem Header="Поворот..."/>
+                        <MenuItem Header="Зеркальное отражение..."/>
+                        <MenuItem Header="Наклон..."/>
+                    </MenuItem>
+                    <MenuItem Header="Выделение">
+                        <MenuItem Header="Все"/>
+                        <MenuItem Header="Отменить выделение"/>
+                        <MenuItem Header="Выделить снова"/>
+                        <MenuItem Header="Инверсия"/>
+                    </MenuItem>
+                    <MenuItem Header="Справка">
+                        <MenuItem Header="Справка программы ItCanDraw F1" Click="MenuItem_Click_FAQ"/>
+                        <MenuItem Header="Руководство по ItCanDraw" Click="MenuItem_Click_FAQ2"/>
+                        <MenuItem Header="Информация о разработчиках" Click="MenuItem_Click_Autors"/>
+                        <MenuItem Header="Выйти..."/>
+                    </MenuItem>
+                </Menu>
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="5*" MinWidth="100"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <GridSplitter Grid.Column="2" Width="5" HorizontalAlignment="Center"/>
+            <StackPanel Orientation="Vertical" Margin="3">
+                <Image Source="Pictures\i_выделения_НеАктивная.png" Margin="0,0,0,3"/>
+                <Image Source="Pictures\ii_квадрат.png" Margin="0,0,0,3"/>
+                <Image Source="Pictures\ii_треугольник.png" Margin="0,0,0,3"/>
+                <Image Source="Pictures\ii_круг.png" Margin="0,0,0,3"/>
+                <Image Source="Pictures\ii_линия.png" Margin="0,0,0,3"/>
+                <Image Source="Pictures\i_удаление_НеАктивная.png" Margin="0,0,0,3"/>
+                <Image Source="Pictures\i_зум_НеАктивная.png" Margin="0,0,0,3"/>
+            </StackPanel>
+            <local:RenderControl x:Name="renderControl" Grid.Column="1" Loaded="renderControl_Loaded"/>
+            <Menu HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="3" Background ="#2C2C2C" >
                 <TextBlock HorizontalAlignment="Center" Height="35" TextWrapping="Wrap" VerticalAlignment="Top" Width="281" Foreground="#FFFCAEF6"><Run/><LineBreak/><Run Text="     Свойства"/><LineBreak/></TextBlock>
                 <TextBlock Height="32" TextWrapping="Wrap" Width="286" Foreground="#FFFCAEF6"><Run Text="  "/><Run Text=" "/><LineBreak/><Run/><LineBreak/><Run Text="Y:"/><LineBreak/></TextBlock>
                 <TextBlock Height="18" TextWrapping="Wrap" Width="119" Foreground="#FFFCAEF6" FontSize="14"><Run Text="  "/><Run Text=" "/><Run Text=" Имя "/><Run Text="объекта"/><LineBreak/><Run/><LineBreak/><Run Text="Y:"/><LineBreak/></TextBlock>
@@ -152,7 +112,6 @@
                 <TextBlock Height="6" TextWrapping="Wrap" Width="286" Foreground="#FFFCAEF6"><Run Text="  "/><Run Text=" "/><LineBreak/><Run/><LineBreak/><Run Text="Y:"/><LineBreak/></TextBlock>
                 <TreeView Height="294" Width="284" Background="#FF2F2F2F" BorderBrush="#FFFCAEF6" Foreground="Black"/>
             </Menu>
-        </DockPanel>
-        <GridSplitter Grid.Column="1"  Grid.RowSpan="2" Width="5" HorizontalAlignment="Center" Margin="0,36,0,0"/>
+        </Grid>
     </Grid>
 </Window>
