--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -15,11 +15,11 @@
             <StackPanel Style="{StaticResource ResourceKey=GrayStretch}" Orientation="Horizontal">
                 <Image Style="{StaticResource ResourceKey=GrayStretch}" Source="Pictures\icon_pinc_2.png" Margin="2"/>
                 <Menu Style="{StaticResource ResourceKey=GrayStretch}" VerticalAlignment="Center">
-                    <MenuItem Header="Файл">
+                    <MenuItem Header="Файл" DataContext="{Binding ElementName=renderControl, Path=ViewModel}">
                         <MenuItem Header="Новый Ctrl+N"/>
-                        <MenuItem Header="Открыть Ctrl+O"/>
+                        <MenuItem Header="Открыть Ctrl+O" Command="{Binding OpenDocumentCommand}"/>
                         <MenuItem Header="Сохранить Ctrl+S"/>
-                        <MenuItem Header="Сохранить как... Shift+Ctr+S"/>
+                        <MenuItem Header="Сохранить как... Shift+Ctr+S" Command="{Binding SaveAsCurrentDocumentCommand}"/>
                         <MenuItem Header="Экспорт в... Ctrl+E">
                             <MenuItem Header="SVG"/>
                             <MenuItem Header="HTML"/>
